# internal/models/debt.go
@@ -1,7 +1,6 @@
 package models
 
 import (
-	"encoding/json"
 	"time"
 )
 
@@ -12,19 +11,27 @@ const (
 	DebtTypeBorrowed DebtType = "BORROWED"
 )
 
+type InstallmentPlan struct {
+	TotalMonths   int       `json:"totalMonths"`
+	PaidMonths    int       `json:"paidMonths"`
+	InterestRate  float64   `json:"interestRate"`
+	MonthlyAmount float64   `json:"monthlyAmount"`
+	StartDate     time.Time `json:"startDate"`
+}
+
 type Debt struct {
-	ID              string          `gorm:"primaryKey" json:"id"`
-	Title           string          `json:"title"`
-	TotalAmount     float64         `json:"total_amount"`
-	RemainingAmount float64         `json:"remaining_amount"`
-	Type            DebtType        `json:"type"`
-	PersonName      string          `json:"person_name"`
-	DueDate         time.Time       `json:"due_date"`
-	WalletID        *string         `json:"wallet_id"`
-	Wallet          *Wallet         `gorm:"foreignKey:WalletID" json:"wallet"`
-	IsInstallment   bool            `json:"is_installment"`
-	InstallmentPlan json.RawMessage `gorm:"type:jsonb" json:"installment_plan"` // Using RawMessage for JSONB
-	Remark          string          `json:"remark"`
-	AutoDeduct      bool            `json:"auto_deduct"`
-	CreatedAt       time.Time       `json:"created_at"`
+	ID              string           `gorm:"primaryKey" json:"id"`
+	Title           string           `json:"title"`
+	TotalAmount     float64          `json:"totalAmount"`
+	RemainingAmount float64          `json:"remainingAmount"`
+	Type            DebtType         `json:"type"`
+	PersonName      string           `json:"personName"`
+	DueDate         time.Time        `json:"dueDate"`
+	WalletID        *string          `json:"walletId"`
+	Wallet          *Wallet          `gorm:"foreignKey:WalletID" json:"wallet"`
+	IsInstallment   bool             `json:"isInstallment"`
+	InstallmentPlan *InstallmentPlan `gorm:"serializer:json" json:"installmentPlan"`
+	Remark          string           `json:"remark"`
+	AutoDeduct      bool             `json:"autoDeduct"`
+	CreatedAt       time.Time        `json:"createdAt"`
 }
