# internal/models/transaction.go
@@ -14,16 +14,17 @@ const (
 
 type Transaction struct {
 	ID          string          `gorm:"primaryKey" json:"id"`
-	WalletID    string          `json:"wallet_id"`
+	WalletID    string          `json:"walletId"`
 	Wallet      Wallet          `gorm:"foreignKey:WalletID" json:"wallet"`
-	ToWalletID  *string         `json:"to_wallet_id"` // Pointer for nullable
-	ToWallet    *Wallet         `gorm:"foreignKey:ToWalletID" json:"to_wallet"`
+	ToWalletID  *string         `json:"toWalletId"`
+	ToWallet    *Wallet         `gorm:"foreignKey:ToWalletID" json:"toWallet"`
 	Amount      float64         `json:"amount"`
 	Type        TransactionType `json:"type"`
-	Category    string          `json:"category"` // Assuming Name or ID stored as string
+	CategoryID  string          `json:"categoryId"`
+	Category    *Category       `gorm:"foreignKey:CategoryID" json:"category"`
 	Description string          `json:"description"`
 	Date        time.Time       `json:"date"`
-	CreatedByID string          `json:"created_by_id"`
-	CreatedBy   User            `gorm:"foreignKey:CreatedByID" json:"created_by"`
-	CreatedAt   time.Time       `json:"created_at"`
+	CreatedByID string          `json:"createdById"`
+	CreatedBy   User            `gorm:"foreignKey:CreatedByID" json:"createdBy"`
+	CreatedAt   time.Time       `json:"createdAt"`
 }
