# internal/routes/routes.go
@@ -32,6 +32,9 @@ func SetupRoutes(r *gin.Engine, db *gorm.DB) {
 		protected := api.Group("/")
 		protected.Use(middleware.AuthMiddleware("http://localhost:8080/realms/raijai-realm", "raijai-backend"))
 		{
+			// Auth / Profile
+			protected.GET("/auth/me", userHandler.GetMe)
+
 			// Users
 			protected.POST("/users", userHandler.CreateUser)
 			protected.GET("/users/:id", userHandler.GetUser)
@@ -39,18 +42,27 @@ func SetupRoutes(r *gin.Engine, db *gorm.DB) {
 			// Categories
 			protected.POST("/categories", categoryHandler.CreateCategory)
 			protected.GET("/categories", categoryHandler.GetCategories)
+			protected.PUT("/categories/:id", categoryHandler.UpdateCategory)
+			protected.DELETE("/categories/:id", categoryHandler.DeleteCategory)
 
 			// Wallets
 			protected.POST("/wallets", walletHandler.CreateWallet)
 			protected.GET("/wallets", walletHandler.GetWallets)
+			protected.PUT("/wallets/:id", walletHandler.UpdateWallet)
+			protected.DELETE("/wallets/:id", walletHandler.DeleteWallet)
 
 			// Transactions
 			protected.POST("/transactions", transactionHandler.CreateTransaction)
 			protected.GET("/transactions", transactionHandler.GetTransactions)
+			protected.PUT("/transactions/:id", transactionHandler.UpdateTransaction)
+			protected.DELETE("/transactions/:id", transactionHandler.DeleteTransaction)
 
 			// Debts
 			protected.POST("/debts", debtHandler.CreateDebt)
 			protected.GET("/debts", debtHandler.GetDebts)
+			protected.PUT("/debts/:id", debtHandler.UpdateDebt)
+			protected.DELETE("/debts/:id", debtHandler.DeleteDebt)
+			protected.POST("/debts/:id/payment", debtHandler.MakePayment)
 
 			// History Logs
 			protected.GET("/history", historyHandler.GetHistoryLogs)
